# aix

./: AndroidManifest.xml  Cargo.toml  dioxus.toml  keystore.jks
.github/workflows/: android-release.yml  build.yml  main.yml  release.yml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/i7m7r8/aix/: MainActivity.java  TorVpnService.java
android/app/src/main/res/layout/: activity_main.xml
assets/: welcome.txt
src/: lib.rs  main.rs  presets.rs
ui/: app.slint  appwindow.slint
