[package]
name = "aix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[package.metadata.android]
package = "com.i7m7r8.aix"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 30

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
anyhow = "1.0"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
arti-client = { version = "0.40", default-features = false, features = ["tokio", "rustls"] }
tor-rtcompat = { version = "0.40", default-features = false, features = ["tokio", "rustls"] }
rusqlite = { version = "0.38", features = ["bundled"] }
jni = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
android_logger = "0.13"
log = "0.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = "0.29"
