[package]
name = "aix"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.android]
package = "com.i7m7r8.aix"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi", "x86_64-linux-android"]
resources = "android/app/src/main/res"
assets = "assets"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 34
compile_sdk_version = 34

[package.metadata.android.signing.release]
path = "keystore.jks"
keystore_password = "aix123"
key_alias = "aix"
key_password = "aix123"

[dependencies]
slint = { version = "=1.15.1", features = ["backend-android-activity-06"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
anyhow = "1.0"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
arti-client = { version = "0.25", default-features = false, features = ["tokio", "rustls", "pt-client", "bridge-client"] }
tor-rtcompat = { version = "0.25", default-features = false, features = ["tokio", "rustls"] }
tor-config = "0.25"
rusqlite = { version = "0.32.1", features = ["bundled"] }
jni = "0.21"
tracing = "0.1"
android_logger = "0.13"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[build-dependencies]
slint-build = "=1.15.1"
